feat: update html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Happy Pregnancy</title>
-  <meta name="description" content="Happy Pregnancy" />
-  <link rel="icon" href="/assets/happy-pregnancy-DcCWh2sL.ico" />
-  <link rel="apple-touch-icon" href="/assets/happy-pregnancy-512x512-DH5Kouk5.png" sizes="180x180" />
+  <title>Dreamer</title>
+  <meta name="description" content="Make your dreams come true" />
+  <link rel="icon" href="/assets/dreamer-DzqmVHhp.ico" />
+  <link rel="apple-touch-icon" href="/assets/dreamer-BzXW0STx.png" sizes="180x180" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="mask-icon" href="/assets/happy-pregnancy-DcCWh2sL.ico" color="#0b7dc2">
+  <link rel="mask-icon" href="/assets/dreamer-DzqmVHhp.ico" color="#0b7dc2">
   <meta name="theme-color" content="#0b7dc2">
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -25,3 +25,4 @@
 </body>
 
 </html>
+
